--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,10 +3,15 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": []
+    "types": [],
+    "paths": {
+      "@state/*": ["src/app/state/*"],
+      "@services/*": ["src/app/services/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@modules/*": ["src/app/modules/*"]
+    }
   },
   "exclude": [
-    "src/test.ts",
     "**/*.spec.ts"
   ]
 }
